static/css/s2.css
/* ... */
.textList .fullFilterView .contentInner {
  max-width: 700px;
  margin: 0 auto;
}
.textList .texts .contentInner {
  max-width: 660px;
  margin: 0 auto;
}
.textList .texts {
  padding: 30px 30px 80px 30px;
}
.textList.fullPanel .texts {
  padding: 40px 40px 80px 40px;
}
.textList .segment.heOnly,
.textList .segment.enOnly {
  text-align: justify;
}
.textListTop {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  background-color: inherit;
  z-index: 1;
}
.textList.fullPanel .textListTop {
  text-align: center;
  height: 55px;
}
.dark .textList {
  background-color: #333331;
}
.dark .textList .anchorText {
  background-color: #333331;
}
.textList .heOnly {
  display: block;
}
.textList.fullPanel .textListTop .leftButtons {
  margin: 9px 0 0 10px;
}
.textList.fullPanel .textListTop .rightButtons {
  margin: 9px 10px 0 0;
}
.gridBox {
  width: 100%;
  background-color: transparent;
}
.gridBox .gridBoxRow {
  display: flex;
  justify-content: space-between;
}
.gridBox .gridBoxItem {
  padding: 0;
  flex: 1;
  border: 3px solid transparent;
  overflow: hidden;
  padding: 5px; /* HACK: overflow hidden will hide any box shadow beneath (b/c overflow cuts off at padding-box) can get around this by increasing padding-box and decreasing margin-box. see here https://stackoverflow.com/questions/33949013/css-overflow-hidden-cuts-shadow*/
  margin: -5px;
  display: flex;
  flex-direction: column;
}
.gridBox .gridBoxItem.placeholder {
  visibility: hidden;
}
@media (max-width: 450px) {
  .gridBox .gridBoxItem {
    border: solid transparent;
    border-width: 2px 4px;
  }
}
.dark .filterSet td {
  border-color: #555;
}
.filterSet td.empty {
  border-left: 1px solid transparent;
  border-right: 1px solid transparent;
}
.topFilters {
  text-transform: none;
}
.dark .topFilters {
  background-color: #2D2D2B;
  border-bottom: 1px solid #444;
}
.textList.fullPanel .topFilters {
  margin: 0;
  border-top: 8px solid transparent;
  padding: 6px 22px 5px;
  background-color: #EDEDED;
}
.topFilters .textFilter {
  color: #999;
  display: inline-block;
  padding: 16px 8px;
}
.topFilters .textFilter.on {
  color: black;
}
.dark .topFilters .textFilter {
  color: #bbb;
}
.topFilters .textFilter > div {
  display: table-cell;
  vertical-align: middle;
}
.textList.fullPanel .recentFilterSet {
  margin: 0 0 12px 0;
}
.textList .recentFilterSet .textFilter,
.connectionsPanelHeader .recentFilterSet.topFilters .textFilter {
  display: inline-block;
  padding: 0;
  margin: 6px 14px;
  background-color: transparent;
  color: #999999;
  border-bottom: 4px solid #cccccc;
  margin-inline-start: 0;
}
.connectionsPanelHeader .recentFilterSet.topFilters .textFilter {
  margin: 18px;
  margin-inline-end: 14px;
  margin-inline-start: 0;
}
.textList .recentFilterSet .textFilter.on, .connectionsPanelHeader .recentFilterSet.topFilters .textFilter.on {
  color: #000000;
  border-bottom-color: var(--category-color);
}
.recentFilterSet.filterSet .textFilter, .recentFilterSet.filterSet .textFilter span{
  font-family: "HebrewInEnglish Text Font", "adobe-garamond-pro", "Crimson Text", Georgia, serif;
}
.hebrew .textList .recentFilterSet.filterSet {
  direction: rtl;
}
.topFiltersInner {
  display: inline-block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  vertical-align: middle;
}
.textList.fullPanel .topFiltersInner {
  white-space: normal;
}
.textList.singlePanel .topFiltersInner .textFilter {
  padding: 5px;
  margin-bottom: 5px;
  color: #999;
}
.textList.singlePanel .topFiltersInner .textFilter:hover{
  color: black;
  background-color: #cccccc;
}
.textList.singlePanel .topFiltersInner .textFilter.on {
  color: black;
}
.textList.singlePanel .topFiltersInner {
  white-space: pre-wrap;
}
.showMoreFilters {
  vertical-align: middle;
  float: right;
}
.categoryFilter {
  text-transform: uppercase;
  padding: 19px 34px;
  font-size: 18px;
  cursor: pointer;
  line-height: 18px;
  color: #000;
  -webkit-tap-hightlight-color: rgba(0,0,0,0); /* pulled from common.css; should apply more broadly? */
}
.textFilter {
  padding: 19px 34px;
  font-size: 18px;
  line-height: 1.2;
  display: block;
  cursor: pointer;
  color: #333;
}
.connectionsCount {
  color: #666;
  font-size: 16px;
  font-weight: lighter;
  letter-spacing: 1px;
  font-family: "Roboto", "Helvetica Neue", "Helvetica", sans-serif;
  unicode-bidi: isolate;
}
.englishAvailableTag {
  font-family: "Roboto", "Helvetica Neue", "Helvetica", sans-serif;
  text-transform: uppercase;
  align-self: flex-start;
  color: #999;
  border: 1px solid #CCC;
  border-radius: 3px;
  font-size: 12px;
  line-height: 18px;
  padding: 0px 3px;
  margin-left: 4px;
}
.filterInner {
  display: flex;
}
.filterInner .filterText {
  flex: 1;
}
.categoryFilterGroup.withBooks {
  border-bottom: 1px solid #E5E5E5;
}
.categoryFilterGroup a:hover {
  text-decoration: none;
}
.categoryFilterGroup.withBooks + .categoryFilterGroup {
  margin-top: 30px;
}
.categoryFilterGroup .textFilter {
    border-top: 1px solid #E5E5E5;
}
.categoryFilter.on, .textFilter.on {
  color: black;
}
.dark .categoryFilter.on, .dark .textFilter.on {
  color: white;
}
.textFilter.lowlight {
  color: #999;
}
.topFilters .textFilter.showMoreFilters {
  color: #999;
}
.bilingual .textFilter .he,
.bilingual .categoryFilter .he {
  display: none;
}
.fullFilterView {
  border-top: 1px solid #ddd;
  background-color: #FBFBFA;
  padding: 40px 20px;
}
.sepia .fullFilterView {
  background-color: #F3F3F1;
}
.dark .fullFilterView {
  background-color: #2D2D2B;
  border-color: #444;
}
.fullFilterView td {
  background-color: white;
  border: 2px solid #FBFBFA;
}
.fullFilterView td.empty {
  background-color: transparent;
}
.dark .fullFilterView td {
  background-color: #333331;
  border-color: #2d2d2b;
  color: white;
}
.fullFilterView .categoryFilter {
  background-color: white;
  margin-bottom: 1px;
}
/* ... */

